# napari-registration

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_registration/: _widget.py  justin_functions.py  napari.yaml
src/napari_registration/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
