[metadata]
name = napari-registration

description = A plugin for manual spatial registration of two images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codyheiser/napari-registration
author = Cody Heiser
author_email = codyheiser49@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/codyheiser/napari-registration/issues
    Documentation = https://github.com/codyheiser/napari-registration#README.md
    Source Code = https://github.com/codyheiser/napari-registration
    User Support = https://github.com/codyheiser/napari-registration/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    napari

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-registration = napari_registration:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
